--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
         <div class="js-clock"></div>
         <h1 class="js-title"></h1>
+        <form class="js-form">
+            <input type='text' placeholder="What is your name"
+        </form>
     </body>
     <script src="clock.js"></script>
 </html>
