--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <body>
         <div class="js-clock"></div>
         <h1 class="js-title"></h1>
-        <form class="js-form">
-            <input type='text' placeholder="What is your name"
+        <form class="js-form form">
+            <input type='text' placeholder="What is your name?">
         </form>
+        <h4 class="js-greetings greetings"></h4>
     </body>
     <script src="clock.js"></script>
+    <script src="greeting.js"></script>
 </html>
