--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <form class="js-toDoForm">
         <input type="text" placeholder="Write a to do">
     </form>
-    <ul class="js-toDoList"></ul>
-        <li id='1'></li>
+    <ul class="js-toDoList">
+    </ul>
+    <span class='js-weather'></span>
+        <!-- <li id='1'></li> -->
     </body>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
     <script src="bg.js"></script>
+    <script src="weather.js"></script>
 </html>
